# framework.system.libdevice-node

./: CMakeLists.txt  device-node.sh  project.config  set-safemode.sh
devices/: CMakeLists.txt  cpu.c  display.c  extcon.c  hall.c  led.c  power.c  thermistor.c  touch.c
include/: device-internal.h  device-node.h  device-oal.h
packaging/: libdevice-node.manifest  libdevice-node.spec
plugins/: device-node-generic.c
src/: device-node.c  device-plugin.c
udev/rules.d/: 95-devices.rules  95-tizen-devices.rules
